[package]
name = "libsums"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
futures = "0.3.28"
once_cell = "1.18.0"
thirtyfour = "0.31.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
url = "2.4.0"
