[package]
name = "libsums"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
fantoccini = { version = "0.19.3", features = ["rustls-tls"] }
once_cell = "1.18.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
url = "2.4.0"
